<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131313"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:id="@+id/netflix"
            android:layout_margin="20dp"
            android:src="@drawable/net_logo"/>

        <TextView
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_toRightOf="@id/netflix"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="180dp"
            android:text="@string/Privacy"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/netflix"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Help"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >



    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="300dp"
        android:background="@drawable/button_border"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:textColorHint="@color/white"
        android:hint="@string/idhint"
        android:textColor="#B2B2B2"
        android:padding="10dp"

        />

    <EditText
        android:layout_below="@id/loginEmail"
        android:id="@+id/loginPassword"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_border"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_visibility_24"
        android:hint="@string/passwordhint"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="#B2B2B2"
        android:padding="10dp"

        />


    <Button
        android:id="@+id/signInButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginPassword"
        android:text="@string/logininbutton"
        android:layout_marginTop="14dp"
        android:background="@drawable/button_border1"
        android:padding="10dp" />



    <TextView

        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:text="@string/recover"
        android:textColor="#EAEAEA"
        android:padding="10dp"

        />


    <TextView
        android:id="@+id/moveToSignUp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/newtonetflix"
        android:textColor="#EAEAEA"
        android:padding="10dp"

        />


    <TextView

        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:text="@string/captch"

        android:textColor="#EAEAEA"
        android:padding="10dp"

        />


</LinearLayout>
</LinearLayout>
